// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination component only renders links to pages that has a title 1`] = `
<div>
  <ul
    class="pagination"
  >
    <li>
      <a
        href="test-slug"
        rel="prev"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-angles-left "
          data-icon="angles-left"
          data-prefix="fas"
          focusable="false"
          role="img"
          style="margin-right: 5px;"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160zm352-160l-160 160c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L269.3 256 406.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0z"
            fill="currentColor"
          />
        </svg>
        Prev
      </a>
    </li>
    <li />
  </ul>
</div>
`;

exports[`Pagination component renders correctly when there is no next page 1`] = `
<div>
  <ul
    class="pagination"
  >
    <li>
      <a
        href="test-slug"
        rel="prev"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-angles-left "
          data-icon="angles-left"
          data-prefix="fas"
          focusable="false"
          role="img"
          style="margin-right: 5px;"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160zm352-160l-160 160c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L269.3 256 406.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0z"
            fill="currentColor"
          />
        </svg>
        Prev
      </a>
    </li>
    <li />
  </ul>
</div>
`;

exports[`Pagination component renders correctly when there is no previous page 1`] = `
<div>
  <ul
    class="pagination"
  >
    <li />
    <li>
      <a
        href="test-slug"
        rel="next"
      >
        Next
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-angles-right "
          data-icon="angles-right"
          data-prefix="fas"
          focusable="false"
          role="img"
          style="margin-left: 5px;"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L370.7 256 233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160zm-352 160l160-160c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L178.7 256 41.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0z"
            fill="currentColor"
          />
        </svg>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Pagination component renders links to the next and previous page 1`] = `
<div>
  <ul
    class="pagination"
  >
    <li>
      <a
        href="test-slug"
        rel="prev"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-angles-left "
          data-icon="angles-left"
          data-prefix="fas"
          focusable="false"
          role="img"
          style="margin-right: 5px;"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160zm352-160l-160 160c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L269.3 256 406.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0z"
            fill="currentColor"
          />
        </svg>
        Prev
      </a>
    </li>
    <li>
      <a
        href="test-slug"
        rel="next"
      >
        Next
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-angles-right "
          data-icon="angles-right"
          data-prefix="fas"
          focusable="false"
          role="img"
          style="margin-left: 5px;"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L370.7 256 233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160zm-352 160l160-160c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L178.7 256 41.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0z"
            fill="currentColor"
          />
        </svg>
      </a>
    </li>
  </ul>
</div>
`;
